# 202302-UFMG-RL

./: .gitignore
poc-gymnasium/: pyproject.toml
poc-gymnasium/src/: blackjack.py  breakout.py  frozenlake.py
tp1/: pyproject.toml
tp1/notebooks/: eval.ipynb  eval_qtable.ipynb  eval_rewards.ipynb
tp1/src/: blackjack.py  exec.sh  main.py  qlearning.py  run.py
tp1/src/conf/: blackjack.yaml
tp2/: README.md  pyproject.toml
tp2/notebooks/: eval.ipynb  eval_params.ipynb  eval_rewards.ipynb  final_model.ipynb
tp2/src/: blackjack.py  exec-cartpole-final.sh  exec-cartpole.sh  exec.sh  run-cartpole.py  run-inverted-double-pendulum.py  run.py  utils.py
tp2/src/conf/: cart-pole.yaml  inverted-double-pendulum.yaml
