[tool.poetry]
name = "poc-gymmnasium"
version = "0.1.0"
description = ""
authors = ["Gustavo Maia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
