[tool.poetry]
name = "tp1"
version = "0.1.0"
description = ""
authors = ["Gustavo Maia"]
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "~3.10"
gymnasium = {extras = ["accept-rom-license", "atari", "toy-text"], version = "^0.29.1"}
matplotlib = "^3.8.0"
numpy = "<1.26"
seaborn = "^0.13.0"
numba = "^0.58.0"
polars = "^0.19.6"
pyarrow = "^13.0.0"
hydra-core = "^1.3.2"
hydra-joblib-launcher = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
