[tool.poetry]
name = "tp1"
version = "0.1.0"
description = ""
authors = ["Gustavo Maia"]
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "~3.10"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
matplotlib = "^3.8.2"
torch = "^2.1.1"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
